# HoleMap3D

./: .gitignore  README.md
abcg/: CMakeLists.txt  abcg_application.cpp  abcg_exception.cpp  abcg_external.hpp  abcg_image.cpp  abcg_openglwindow.cpp  abcg_openglwindow.hpp
cmake/: Common.cmake
examples/: CMakeLists.txt
examples/holemap/: CMakeLists.txt  main.cpp
examples/holemap/assets/: UnlitVertexColor.vert
examples/holemap/base/: camera.cpp  camera.h  image.cpp  image.h  point2d.cpp  point2d.h  point3d.cpp  point3d.h  projection.cpp  projection.h  track.cpp  track.h  types.h
examples/holemap/core/: aliceVisionPipeline.cpp  aliceVisionPipeline.h  threadpool.h
examples/holemap/dataIO/: sfmDataIOFromColmap.cpp  sfmDataIOFromColmap.hpp  sfmDataIOFromMeshroom.cpp  sfmDataIOFromMeshroom.hpp
examples/holemap/tools/: endian.hpp  misc.hpp  sole.hpp
examples/holemap/vender/: attributepanel.cpp  attributepanel.hpp  fileinfopanel.cpp  fileinfopanel.hpp  gridpainter.cpp  gridpainter.h  linepainter.cpp  linepainter.h  logpanel.cpp  logpanel.hpp  menupanel.cpp  menupanel.hpp  meshpainter.cpp  meshpainter.h  openglwindow.cpp  openglwindow.hpp  params.h  photolistpanel.cpp  photolistpanel.hpp  pointpainter.cpp  pointpainter.h  projectmanagepanel.cpp  projectmanagepanel.hpp  quickstartpanel.cpp  quickstartpanel.hpp  sfmpainter.cpp  sfmpainter.h  sfmresultpanel.cpp  sfmresultpanel.hpp  trackball.cpp  trianglepainter.cpp  trianglepainter.h
